<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <ImageView
                android:id="@+id/detail_images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="Furniture images"
                android:src="@drawable/ic_star"/>

            <TextView
                android:id="@+id/detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="32dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="7">

                    <ImageView
                        android:id="@+id/detail_rating_first_star"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_star_complete_24"/>

                    <ImageView
                        android:id="@+id/detail_rating_second_star"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_star_complete_24"/>

                    <ImageView
                        android:id="@+id/detail_rating_third_star"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_star_complete_24"/>

                    <ImageView
                        android:id="@+id/detail_rating_fourth_star"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_star_complete_24"/>

                    <ImageView
                        android:id="@+id/detail_rating_fifth_star"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_star_half_24"/>

                    <TextView
                        android:id="@+id/detail_rating_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:layout_marginStart="8dp"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="8dp">

                    <TextView
                        android:id="@+id/detail_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/detail_discount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:paddingLeft="16dp"
                        android:textColor="@color/text_discount"/>

                    <TextView
                        android:id="@+id/detail_sale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:paddingLeft="16dp"
                        android:textColor="@color/text_sale_price"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/detail_button_3d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_3D_view"
                    android:layout_weight="1"
                    android:layout_margin="8dp"/>

                <Button
                    android:id="@+id/detail_button_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_in_stores"
                    android:layout_weight="1"
                    android:layout_margin="8dp"/>

                <Button
                    android:id="@+id/detail_button_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_star_gray_24"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:layout_gravity="center"/>

            </LinearLayout>
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_detail_description"
                android:textSize="26dp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/detail_short_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_detail_size"
                android:textSize="26dp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/detail_dimension_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/detail_dimension_w"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/detail_dimension_h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/subtitle_detail_color"
                        android:textSize="26dp"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp" />

                    <TextView
                        android:id="@+id/detail_colors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/subtitle_detail_quantity"
                        android:textSize="26dp"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/detail_button_minus"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:text="-"
                            android:textSize="24dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/detail_quantity"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:textSize="26dp"
                            android:textStyle="bold"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:gravity="center"/>

                        <Button
                            android:id="@+id/detail_button_plus"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:text="+"
                            android:textSize="24dp"
                            android:textStyle="bold"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Details"
                android:textSize="26dp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/detail_long_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="🎮【Premium Vintage Leather】: Selected vintage leather with bottom layer cotton covered.Ultimate smooth and soft,premium to touch,more comfortable and durable than PU leather,giving your whole body cushion with ultimate comfort.Breathable,skin-friendly,waterproof,Dirt,FadeTear resistant and easy to clean.4.3 in thick seat cushion made of high density shaped foam,it has great resilience and breathability,comfortable to sit for long time working and gaming.
🎮【Ergonomic Comfort】: The USB powered lumbar pillow has massage function which can effectively reduce fatigue.The chair back 90 ° to 155 ° reclining and The retractable footrest make you relax like sleep in bed.The detachable and adjustable headrest pillow and lumbar support pillow give multi-point support to disperse the spine and body pressure, ensuring your comfortable and ideal posture in the gaming and working.
🎮【Multi-Functions and Perfect Gift】: Perfect for both gaming and office scenes .The chair back 90 ° to 155° reclining and The extended retractable footrest make you relax like sleep in bed.smooth 360 ° swivel and chair Height adjustable. rocking 15°back and forth comfortably .2D Armrests are adjustable in up and down and right and left, while the armrest pad is coated in soft PU leather.A perfect gift for birthday, Valentine’s, Thanksgiving day, Christmas gift.
🎮【Sturdy Structure】: Strong integrated metal frame and 5-point heavy duty anti-rollover wheelbase makes the chair Extremely stable .Upgraded PU casters with 2000 miles rolling tests roll quite smoothly and noiseless and protect floor well.The thickened explosion-proof chassis and tilt mechanism control can adjust the chair angle by 90 ° To 155°at any angle，Safety lock design to prevent overturning.Durable SGS and BIFMA certificated gas cylinder.recommended maximum weight ：330lb
🎮【Easy to Assemble and Excellent Service】: Detail instructions included in the package. We have screws pre-assembly to avoid screws assembly trouble.Your satisfaction is our top concern.If you have any problem, please contact us. 24/7 customer services team all for purchase experience. One-month return without giving a reason and 1 year chair parts quality warranty as promise."
                android:textSize="20dp"/>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/detail_button_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add_shopping_cart_24"
        android:backgroundTint="@color/gray_background"/>


</androidx.constraintlayout.widget.ConstraintLayout>